# StressSolve

./: .gitignore  CMakeLists.txt  README.md  StressSolveApp.sln  StressSolveApp.ui  StressSolveApp.vcxproj  StressSolveApp.vcxproj.filters  bearer_token.txt
StressSolveApp/: DataHandler.cpp  DataHandler.h  Display.cpp  Node.cpp  Node.h  RandomForest.cpp  StressSolve.cpp  StressSolve.h  StressSolveApp.cpp  StressSolveApp.sln  StressSolveApp.vcxproj  StressSolveApp.vcxproj.filters  SuggestionMaker.cpp  SuggestionMaker.h  random_forest.json
StressSolveApp/GUI/src/StressSolveGUI/: .gitignore  CMakeLists.txt  main.cpp
StressSolveApp/GUI/src/StressSolveGUI/gui/: CMakeLists.txt  Main.qml  main.cpp
StressSolveApp/include/: DecisionTree.h  Node.h  Student.h
StressSolveApp/src/: DecisionTree.cpp  Node.cpp  StressSolve.cpp  StressSolveApp.cpp  Student.cpp
StressSolveTest/: DecisionTreeTest.cpp  NodeTest.cpp  StressSolveTest.cpp  StressSolveTest.vcxproj  StressSolveTest.vcxproj.filters  StudentTest.cpp  SuggestionMakerTest.cpp
include/: DataHandler.h  DecisionTree.h  Display.h  Node.h  RandomForest.h  StressSolve.h  StressSolveApp.h  StressSolveApp.ui  Student.h  SuggestionMaker.h
resources/: StressSolveApp.aps  StressSolveApp.qrc  StressSolveApp.rc
src/: DataHandler.cpp  DecisionTree.cpp  Display.cpp  Node.cpp  RandomForest.cpp  StressSolve.cpp  StressSolveApp.cpp  Student.cpp  SuggestionMaker.cpp  main.cpp
